--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -22,8 +22,9 @@
 .blog_img{
     background-image: url('./Blog_header-img.jpg');
     background-position: center;
-    background-size: cover;
+    background-size: initial;
     color: #fff;
+    width: 100vw;
     height: 350px;
     background-color: #0f4c75;
 }
